[package]
name = "nvnc"
version = "26.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ipnetwork = "0.20"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bytes = "1.5"
byteorder = "1.5"
hex = "0.4"

